--- a/employeeDashboard/templates/profile.html
+++ b/employeeDashboard/templates/profile.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
- {% block content %}
+{% extends 'adminDashboard/includes/base.html' %}
+{% block content%}
+
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -382,4 +383,5 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-{% endblock content %}
+
+  {% endblock content %}
