--- a/UsersAuth/templates/UsersAuth/login.html
+++ b/UsersAuth/templates/UsersAuth/login.html
@@ -1,6 +1,5 @@
-{% extends 'adminDashboard/includes/base.html' %}
+{% extends 'UsersAuth/user_auth_base.html' %}
 {% block content %}
-
 
 <body class="hold-transition login-page">
 <div class="login-box">
@@ -30,7 +29,14 @@
           </div>
         </div>
         <div class="row">
-         
+          <div class="col-8">
+            <div class="icheck-primary">
+              <input type="checkbox" id="remember">
+              <label for="remember">
+                Remember Me
+              </label>
+            </div>
+          </div>
           <!-- /.col -->
           <div class="col-4">
             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
@@ -39,7 +45,16 @@
         </div>
       </form>
 
-      
+      <div class="social-auth-links text-center mb-3">
+        <p>- OR -</p>
+        <a href="#" class="btn btn-block btn-primary">
+          <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
+        </a>
+        <a href="#" class="btn btn-block btn-danger">
+          <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
+        </a>
+      </div>
+      <!-- /.social-auth-links -->
 
       <p class="mb-1">
         <a href="forgot-password.html">I forgot my password</a>
