--- a/adminDashboard/templates/adminDashboard/leavemanagement/allleaves.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/allleaves.html
@@ -1,5 +1,5 @@
 
-{% extends 'adminDashboard/includes/base.html' %}
+{% extends 'adminDashboard/base.html' %}
 {% block content %}
 
  <!-- Content Wrapper. Contains page content -->
