--- a/UsersAuth/templates/UsersAuth/register.html
+++ b/UsersAuth/templates/UsersAuth/register.html
@@ -1,4 +1,4 @@
-{% extends 'adminDashboard/includes/base.html' %}
+{% extends 'UsersAuth/user_auth_base.html' %}
 {% block content %}
 
 
@@ -11,8 +11,9 @@
   <div class="card">
     <div class="card-body register-card-body">
       <p class="login-box-msg">Register a new membership</p>
-    {% csrf_token %}
+    
       <form action="" method="POST">
+      {% csrf_token %}
       {{form}}
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Full name">
@@ -47,14 +48,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-8">
-            <div class="icheck-primary">
-              <input type="checkbox" id="agreeTerms" name="terms" value="agree">
-              <label for="agreeTerms">
-               I agree to the <a href="#">terms</a>
-              </label>
-            </div>
-          </div>
+          
           <!-- /.col -->
           <div class="col-4">
             <button type="submit" class="btn btn-primary btn-block">Register</button>
@@ -64,7 +58,7 @@
       </form>
 
 
-      <a href="login.html" class="text-center">I already have a membership</a>
+      <a href="{% url 'login'%}" class="text-center">I already have an account? Login</a>
     </div>
     <!-- /.form-box -->
   </div><!-- /.card -->
