--- a/employeeDashboard/templates/profile.html
+++ b/employeeDashboard/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'adminDashboard/includes/base.html' %}
+{% extends 'adminDashboard/base.html' %}
 {% block content%}
 
   <!-- Content Wrapper. Contains page content -->
