--- a/UsersAuth/templates/UsersAuth/login.html
+++ b/UsersAuth/templates/UsersAuth/login.html
@@ -1,6 +1,7 @@
 {% extends 'UsersAuth/user_auth_base.html' %}
 {% block content %}
 {% load static %}
+{% load crispy_forms_tags %}
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
@@ -12,9 +13,14 @@
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in to apply for leave</p>
       
-    {% csrf_token %}
+    
       <form action="" method="post">
-        <div class="input-group mb-3">
+        {% csrf_token %}
+
+        {{ form | crispy }}
+        <!--
+
+          <div class="input-group mb-3">
           <input type="email" class="form-control" placeholder="Email">
           <div class="input-group-append">
             <div class="input-group-text">
@@ -36,9 +42,10 @@
               <label for="remember"> </label>
             </div>
           </div>
+        -->
           <!-- /.col -->
-          <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+          <div class="col-4 text-center ">
+            <button type="submit" class=" btn btn-primary btn-block">Sign In</button>
           </div>
           <!-- /.col -->
         </div>
@@ -46,7 +53,7 @@
 
     
       </p>
-      <p class="mb-0">
+      <p class="mb-0 text-center">
         <a href="{% url 'register'%}" class="text-center">Dont have an account? Register here</a>
       </p>
     </div>
