--- a/employeeDashboard/templates/base.html
+++ b/employeeDashboard/templates/base.html
@@ -52,8 +52,8 @@
 {% endif %}
 
 <footer class="main-footer">
-    <strong>Proudly coded by &copy; 2019-2020 <a href="#">Interns(Daniel and Fahad)</a>.</strong>
-    With &hearts; from Mrs Julian Rwejo
+    <strong> &copy; 2019-2020 <a href="#"></a>.</strong>
+    NITA
     <div class="float-right d-none d-sm-inline-block">
       
     </div>
