--- a/UsersAuth/templates/UsersAuth/login.html
+++ b/UsersAuth/templates/UsersAuth/login.html
@@ -15,13 +15,14 @@
       
     
       <form action="" method="post">
+      <div class="card">
+        <div class="card-body btn-danger">
+          {{form.errors}}
+        </div>
+      </div>
         {% csrf_token %}
-
-        {{ form | crispy }}
-        <!--
-
           <div class="input-group mb-3">
-          <input type="email" class="form-control" placeholder="Email">
+         {{ form.username}}
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -29,7 +30,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" placeholder="Password">
+          {{form.password}}
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -42,10 +43,10 @@
               <label for="remember"> </label>
             </div>
           </div>
-        -->
+    
           <!-- /.col -->
           <div class="col-4 text-center ">
-            <button type="submit" class=" btn btn-primary btn-block">Sign In</button>
+            <button type="submit" class=" btn btn-success btn-block">Sign In</button>
           </div>
           <!-- /.col -->
         </div>
@@ -61,5 +62,14 @@
   </div>
 </div>
 <!-- /.login-box -->
+<script>
+     var  form_fields = document.getElementsByTagName('input')
+          form_fields[1].placeholder ='User name';
+          form_fields[2].placeholder ='password';
 
+        for( var field in form_fields ){
+            form_fields[field].className += 'form-control'
+        }
+
+ </script>
 {% endblock content %}
