--- a/employeeDashboard/templates/leaves_form.html
+++ b/employeeDashboard/templates/leaves_form.html
@@ -31,10 +31,30 @@
 <section class="content">
     <form action="" method="post"   >  
         {% csrf_token %}
-        
-            {{form | crispy}}
-        
-        <button class="btn btn-primary" type="submit" value="submit"> apply </button>        
+      
+            
+        <div class="row ml-4">
+
+           
+            
+            <div class="col-sm-4">
+                {{form.DateApplied | as_crispy_field }}
+            </div>
+
+            <div class="col-sm-4">
+                    {{form.StartDate | as_crispy_field }}
+            </div>
+
+            <div class="col-sm-4">
+                    {{form.EndDate | as_crispy_field }}
+            </div>
+            <div class="col-sm-4">
+                    {{form.LeaveType | as_crispy_field }}
+            </div>
+
+
+        </div>
+        <button class=" ml-5 btn btn-primary" type="submit" value="submit"> apply </button>        
     </form>
 </section>
 
