--- a/adminDashboard/templates/adminDashboard/includes/footer.html
+++ b/adminDashboard/templates/adminDashboard/includes/footer.html
@@ -9,7 +9,7 @@
 </div>
 <!-- ./wrapper -->
 <footer class="main-footer">
-    <strong>Proudly Coded by  &copy; 2019-2020 <a href="">Interns(Daniel, Fahad and Stuart)</a>.</strong>
+    <strong>Proudly Coded by  &copy; 2019-2020 <a href="">Interns(Daniel, Fahad and Stuart Mujuzi)</a>.</strong>
     <div class="float-right d-none d-sm-inline-block">
       
     </div>
