--- a/adminDashboard/templates/adminDashboard/includes/sidenav.html
+++ b/adminDashboard/templates/adminDashboard/includes/sidenav.html
@@ -79,6 +79,15 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a href="{% url 'adminDashboard:monetary_value_all_staff' %}" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Monetary Value
+                        </p>
+                    </a>
+                </li>
+
 
                 <li class="nav-item">
                     <a href="{% url 'logout' %}" class="nav-link">
