--- a/adminDashboard/templates/adminDashboard/leavemanagement/allleaves.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/allleaves.html
@@ -24,7 +24,7 @@
 </style>
 
 
-<div class="content-wrapper">
+<div class="content-wrapper" id="page">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
@@ -225,6 +225,42 @@
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+
+<center>
+    <div>
+        {% if emp_over_thirty %}
+
+            <p style="font-weight: bold; color:red;">
+                YOU HAVE STAFF UNDER YOUR SUPERVISION IN EXCESS OF 30 OUTSTANDING LEAVE DAYS.
+                <br>
+                PLEASE ADVISE THEM TO MAKE A LEAVE REQUEST.
+                <br>
+                YOU HAVE BEEN BLOCKED FROM USING THE SYSTEM UNTIL ALL YOUR STAFF
+                ARE BELOW OR EQUAL TO 30 OUTSTANDING LEAVE DAYS.
+                <br>
+
+                THE STAFF IN EXCESS ARE:
+
+            </p>
+            {% for emp in emp_over_thirty %}
+                <p>
+                    {{emp.first_name}} {{emp.last_name}}
+                </p>
+            {% endfor %}
+
+        {% endif %}
+    </div>
+    </center>
+
+    {% if emp_over_thirty %}
+
+
+        <script>
+
+           document.getElementById("page").style.display = "none";
+
+        </script>
+    {% endif %}
 
 
 <script>
