--- a/adminDashboard/templates/adminDashboard/leavemanagement/approvedleaves.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/approvedleaves.html
@@ -24,7 +24,7 @@
 </style>
 
 
-<div class="content-wrapper">
+<div class="content-wrapper" id="page">
     <!-- Content Header (Page header) -->
     <div class="content-header">
         <div class="container-fluid">
@@ -189,6 +189,19 @@
                             <li class="list-item"> {{leaves.Approval_by_Line_Manager}}</li>
                             {% endif %}
 
+                            {% if leaves.cancellation_status == True and leaves.Approval_by_Line_Manager == 'Approved' and leaves.Approval_by_Director == 'Approved' and leaves.Approval_by_Executive_Director == 'Approved' %}
+                            <br/>
+                            <small style="color:orange; font-weight:bold;">
+                                CANCELLATION REQUEST APPROVED!
+                            </small>
+
+                             {% elif leaves.cancellation_status == True %}
+                            <br/>
+                            <small style="color:orange; font-weight:bold;">
+                                Cancellation in progress...
+                            </small>
+                            {% endif %}
+
                         </td>
                         <td class="project-actions text-right">
                             <a class="btn btn-primary btn-sm" href="{{leaves.get_absolute_url}}">
@@ -214,7 +227,7 @@
 
 
 <!--model starts here-->
-<form method="POST" action="">
+<form method="POST" action="" id="page_two">
     {% csrf_token %}
     <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
@@ -255,6 +268,42 @@
 </form>
 <!--model ends here-->
 
+    <center>
+    <div>
+        {% if emp_over_thirty %}
+
+            <p style="font-weight: bold; color:red;">
+                YOU HAVE STAFF UNDER YOUR SUPERVISION IN EXCESS OF 30 OUTSTANDING LEAVE DAYS.
+                <br>
+                PLEASE ADVISE THEM TO MAKE A LEAVE REQUEST.
+                <br>
+                YOU HAVE BEEN BLOCKED FROM USING THE SYSTEM UNTIL ALL YOUR STAFF
+                ARE BELOW OR EQUAL TO 30 OUTSTANDING LEAVE DAYS.
+                <br>
+
+                THE STAFF IN EXCESS ARE:
+
+            </p>
+            {% for emp in emp_over_thirty %}
+                <p>
+                    {{emp.first_name}} {{emp.last_name}}
+                </p>
+            {% endfor %}
+
+        {% endif %}
+    </div>
+    </center>
+
+    {% if emp_over_thirty %}
+
+
+        <script>
+
+           document.getElementById("page").style.display = "none";
+           document.getElementById("page_two").style.display = "none";
+
+        </script>
+    {% endif %}
 
 <script>
 
