--- a/adminDashboard/templates/adminDashboard/leavemanagement/monetary_value_selected_employee.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/monetary_value_selected_employee.html
@@ -1,10 +1,9 @@
 {% extends 'adminDashboard/base.html' %}
-{% load material_form %}
 {% load static %}
 {% block content %}
 
-
 <!-- Content Wrapper. Contains page content -->
+
 
 <style>
 
@@ -22,9 +21,8 @@
 
     }
 
-
-
 </style>
+
 
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -32,27 +30,35 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark"> Leave Detail</h1>
+                    <h1 class="m-0 text-dark">Calculate Monetary Value</h1>
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="{% url 'adminDashboard:pending' %}">Home</a></li>
-                        <li class="breadcrumb-item active">Dashboard v1</li>
+                        <li class="breadcrumb-item active">All</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
         </div><!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
+    {% if messages %}
+
+
+      <ul class="messages" style="color:orange; font-size:20px; font-weight:bold;">
+          {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+           {% endfor %}
+      </ul>
+    {% endif %}
 
     <!-- Main content -->
     <section class="content">
-
-
-
         <!-- Default box -->
         <div class="card">
             <div class="card-header">
+                <h3 class="card-title" style="padding-right: 20px;">All Staff</h3>
+
 
 
                 <div class="card-tools">
@@ -64,80 +70,78 @@
                         <i class="fas fa-times"></i></button>
                 </div>
 
-
-
 <!--                ***************************** SEARCH FEATURE *****************************-->
 
+                <input type="text" id="searchName" onkeyup="findName()" class="searchBox" placeholder="Search by Name...">
 
-
-
-               <input type="text" id="searchName" onkeyup="findName()" class="searchBox" placeholder="Search by Name...">
-
-
-
-
-
-                <input type="text" id="searchDepartment" onkeyup="findDepartment()" class="searchBox" placeholder="Search by Department...">
-
-
+                <input type="text" id="searchDirectorate" onkeyup="findDirectorate()" class="searchBox" placeholder="Search by Directorate...">
 
 
 <!--                 ***************************** SEARCH FEATURE *****************************-->
 
-
+            <p>Average number of working days in a month = 22</p>
             </div>
             <div class="card-body p-0">
+
                 <table class="table table-striped projects" id="myTable">
                     <thead>
+
                     <tr>
                         <th style="width: 5%">
-                            Leave Request ID
+                            User ID
                         </th>
-                        <th style="width: 10%">
+                        <th style="width: 20%">
                             Names
                         </th>
                         <th style="width: 10%">
                             Department
                         </th>
                         <th style="width: 10%">
-                            Start Date
+                            Directorate
                         </th>
-                        <th style="width: 10%">
-                            End Date
+                        <th>
+                            Role
                         </th>
-                        <th style="width: 10%">
-                            File Upload
-                        </th>
-                        <th style="width: 8%" class="text-center">
-                            Status
-                        </th>
-                        <th style="width: 20%">
 
+
+
+                        <th style="width: 8%" class="text-center">
+                            Outstanding Leave Days
                         </th>
+
+                        <th style="width: 8%" class="text-center">
+                            Salary per month(UGX)
+                        </th>
+
+
+                        <th style="width: 8%" class="text-center">
+                            Monetary Value Per Working Day(UGX)
+                        </th>
+
+                        <th style="width: 8%" class="text-center">
+                            Total Monetary Value of Outstanding Leave Days(UGX)
+                        </th>
+
+
                     </tr>
                     </thead>
                     <tbody>
 
-                    {% for leave in all_leave %}
-
                     <tr>
                         <td>
-                            {{leave.pk}}
+                            {{selected_employee.pk}}
                         </td>
                         <td>
                             <a>
-                                {{leave.name}}
+                                {{selected_employee.first_name}} {{selected_employee.last_name}}
                             </a>
-                            <br/>
-                            <small>
-                                {{leave.DateApplied}}
-                            </small>
+
                         </td>
                         <td>
                             <ul class="list-inline">
 
                                 <li class="list-inline-item">
-                                    {{leave.empDepartment}}
+                                    {{selected_employee.department}}
                                 </li>
                             </ul>
                         </td>
@@ -145,100 +149,68 @@
                             <ul class="list-inline">
 
                                 <li class="list-inline-item">
-                                    {{leave.StartDate}}
+                                    {{selected_employee.directorate}}
                                 </li>
                             </ul>
                         </td>
-                        <td>
-                            <ul class="list-inline">
-
-                                <li class="list-inline-item">
-                                    {{leave.EndDate}}
-                                </li>
-                            </ul>
+                        <td class="project_progress">
+                            {{selected_employee.role}}
                         </td>
-                        <td class="project_progress" style="width: 20%">
-                            {% if not leave.file_upload %}
-                            No File
-                            {% else %}
-                            <a href="{{ leave.file_upload.url }}" class="btn btn-primary btn-sm" >
-                                Download File
-                            </a>
-                            {% endif %}
-                        </td>
-                        <td class="project-state">
 
-                            {% if leave.Approval_by_Line_Manager == 'Approved' and leave.Approval_by_Director == 'Approved' and leave.Approval_by_Executive_Director == 'Approved' %}
-                            <span class="badge badge-success">Approved</span>
+                        <td class="project_progress">
 
-
-                            {% elif leave.Approval_by_Line_Manager == 'Rejected' or leave.Approval_by_Director == 'Rejected' or leave.Approval_by_Executive_Director == 'Rejected' %}
-                            <span class="badge badge-danger">Rejected</span>
-
-                            {% else %}
-                            <li class="list-item"> Pending</li>
-
-                            {% endif %}
-
-                            {% if leave.cancellation_status == True and leave.Approval_by_Line_Manager == 'Approved' and leave.Approval_by_Director == 'Approved' and leave.Approval_by_Executive_Director == 'Approved' %}
-                            <br/>
-                            <small style="color:orange; font-weight:bold;">
-                                CANCELLATION REQUEST APPROVED!
-                            </small>
-
-                            {% elif leave.cancellation_status == True and leave.Approval_by_Line_Manager == 'Rejected' and leave.Approval_by_Director == 'Rejected' and leave.Approval_by_Executive_Director == 'Rejected' %}
-                            <br/>
-                            <small style="color:orange; font-weight:bold;">
-                                CANCELLATION REQUEST REJECTED!
-                            </small>
-
-                             {% elif leave.cancellation_status == True %}
-                            <br/>
-                            <small style="color:orange; font-weight:bold;">
-                                Cancellation in progress...
-                            </small>
-                            {% endif %}
-
+                            {{selected_employee.OutstandingLeaveDays}}
 
                         </td>
-                        <td class="project-actions text-right">
-
-                            {% if request.user.department != "Human Resources" %}
-                            <a href="{% url 'adminDashboard:LeaveUpdateView' pk=leave.pk %}"
-                               class="btn btn-info btn-sm">
-                                <i class="fas fa-pencil-alt">
-                                    Approve
-                                </i>
-                            </a>
 
 
-                            {% elif leave.empDepartment.name == "Human Resources" and request.user.is_line_manager %}
-                             <a href="{% url 'adminDashboard:LeaveUpdateView' pk=leave.pk %}"
-                               class="btn btn-info btn-sm">
-                                <i class="fas fa-pencil-alt">
-                                    Approve
-                                </i>
-                            </a>
+
+                        <td class="project_progress" style="width: 8%">
+
+                                <form method="post">
+                                    {% csrf_token %}
+
+                                {{salary_form.salary}}
+
+                                <button type="submit" class=" btn btn-success btn-block">Calculate</button>
+                                </form>
+
+                        </td>
+
+
+                        <td class="project_progress">
+
+                            {% if monetary_value_per_day %}
+
+                            {{monetary_value_per_day}}
+
                             {% endif %}
 
                         </td>
+
+                        <td class="project_progress">
+
+                            {% if monetary_value_outstanding_leave_days %}
+
+                            {{monetary_value_outstanding_leave_days}}
+
+                            {% endif %}
+
+                        </td>
+
+
                     </tr>
-                    {% endfor %}
                     </tbody>
                 </table>
-                <div id="modal-div"></div>
-
-                <!-- /.card-body -->
             </div>
-            <!-- /.card -->
-
+            <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
 
     </section>
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
-
-<!--model pop up-->
 
 
 <script>
@@ -267,17 +239,17 @@ function findName() {
 
 
 
-function findDepartment() {
+function findDirectorate() {
   // Declare variables
   var input, filter, table, tr, td, i, txtValue;
-  input = document.getElementById("searchDepartment");
+  input = document.getElementById("searchDirectorate");
   filter = input.value.toUpperCase(); //Makes the input text uppercase
   table = document.getElementById("myTable"); // Gets the entire table
   tr = table.getElementsByTagName("tr"); //Gets all rows
 
   // Loop through all table rows, and hide those who don't match the search query
   for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[2]; // Data to be shown
+    td = tr[i].getElementsByTagName("td")[3]; // Data to be shown
     if (td) {
       txtValue = td.textContent || td.innerText;
       if (txtValue.toUpperCase().indexOf(filter) > -1) {
